tests/pass/Ternary.java
package pass;

public class Ternary {
  public int testTernary(int returnTrue, int returnFalse) {
    return (true) ? returnTrue : returnFalse;
  }
}
